Improvements and new events